# xiv-tools

./: .gitignore  CMakeLists.txt  README.md  build.sh
configured_files/: CMakeLists.txt  config.hpp.in
include/xiv/: endian.hpp  version.hpp
include/xivte/: dds.hpp  endian.hpp  texture.hpp  version.hpp  xivtex.hpp
src/: CMakeLists.txt  main.cpp  texture.cpp  version.cpp  xivtex.cpp
src/xiv/: CMakeLists.txt  version.cpp
src/xivte/: CMakeLists.txt  main.cpp  texture.cpp
